FLY wire David/force-app/main/default/objects/Product_Configuration__c/Product_Configuration__c.object-meta.xml
<CustomObject>
    <description>Product Configuration houses information specific to how the product is set up for a particular client. For some products this would be portal information.</description>
    <label>Product Configuration</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Product Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>