FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Ability_to_Edit_Plan_Balance_plan_owner__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Edit_Plan_Balance_plan_owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability for plan owner to edit plan balance?</description>
    <inlineHelpText>Ability for plan owner to edit plan balance?</inlineHelpText>
    <label>Ability to Edit Plan Balance (plan owner</label>
    <type>Checkbox</type>
</CustomField>