FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Ability_to_Pay_in_full__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Pay_in_full__c</fullName>
    <label>Ability to Pay in full</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>