FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Client Account this product is set up for.</description>
    <inlineHelpText>Enter the Account (Client) this product is set up for.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Config</relationshipLabel>
    <relationshipName>Product_Configuration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>