FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Account_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Account_Capabilities__c</fullName>
    <label>Account Capabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payout</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>