FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Account_LongID__c.field-meta.xml
<CustomField>
    <fullName>Account_LongID__c</fullName>
    <description>Show the Full Account ID on Product Config so it can easily be referenced when creating Prod Config records and adding it to Admin/Mission Control.</description>
    <formula>Account__r.AccountLongID__c</formula>
    <inlineHelpText>Show the Full Account ID on Product Config so it can easily be referenced when creating Prod Config records and adding it to Admin/Mission Control.</inlineHelpText>
    <label>Account LongID</label>
    <type>Text</type>
</CustomField>