FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/ACH_Processor__c.field-meta.xml
<CustomField>
    <fullName>ACH_Processor__c</fullName>
    <description>Select ACH Processor for this Product</description>
    <inlineHelpText>Select ACH Processor for this Product</inlineHelpText>
    <label>ACH Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANK OF AMERICA</fullName>
            </value>
            <value>
                <fullName>BNY MELLON</fullName>
            </value>
            <value>
                <fullName>Citizens Bank</fullName>
            </value>
            <value>
                <fullName>First Horizon Bank</fullName>
            </value>
            <value>
                <fullName>Flywire Gateway/PNC</fullName>
            </value>
            <value>
                <fullName>Flywire MOR</fullName>
            </value>
            <value>
                <fullName>JPMorgan</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>