FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Date__c</fullName>
    <description>Capture date stamp of when Product first got activated. Do not override. To be filled in automatically. This is so the integration between Admin/Looker/SFDC can set the current status of the portal while we retain when it was first activated.</description>
    <inlineHelpText>Capture date stamp of when Product first got activated. Do not override. To be filled in automatically. This is so the integration between Admin/Looker/SFDC can set the current status of the portal while we retain when it was first activated.</inlineHelpText>
    <label>Activated Date</label>
    <type>Date</type>
</CustomField>