FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Activated_on_Portal_Code__c.field-meta.xml
<CustomField>
    <fullName>Activated_on_Portal_Code__c</fullName>
    <description>This Product/Service is being added or activated on an existing Portal. This is to denote when additional products such as DOM same currency payments are activated on a XB portal rather than a portal being created just for those payments.</description>
    <inlineHelpText>This Product/Service is added or activated on an existing Portal. Please note the portal code here.</inlineHelpText>
    <label>Added to Portal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>