FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Addtnl_Account__c.field-meta.xml
<CustomField>
    <fullName>Addtnl_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link Prod Config to Additional Account. For 529s this is the School the portal is for.</inlineHelpText>
    <label>Addtnl Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Addtnl Prod Config - Indirect</relationshipLabel>
    <relationshipName>Addtnl_Product_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>