FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Allow_edit_of_default_amount_for_payers__c.field-meta.xml
<CustomField>
    <fullName>Allow_edit_of_default_amount_for_payers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>If there is a default amount set for this portal, can payers edit it?</inlineHelpText>
    <label>Allow edit of default amount for payers</label>
    <type>Checkbox</type>
</CustomField>