FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Allow_edit_of_provider_payer_amount__c.field-meta.xml
<CustomField>
    <fullName>Allow_edit_of_provider_payer_amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>For integrated portals that carry over an amount, can payers edit the provider amount?</inlineHelpText>
    <label>Allow edit of provider payer amount</label>
    <type>Checkbox</type>
</CustomField>