FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Allow_local_payment__c.field-meta.xml
<CustomField>
    <fullName>Allow_local_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Can this portal accept domestic or same-currency payments?</inlineHelpText>
    <label>Allow local payment</label>
    <type>Checkbox</type>
</CustomField>