FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee__c</fullName>
    <description>global payments field</description>
    <label>Annual Fee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>