FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Applicable_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Taxes__c</fullName>
    <description>GP request - Kelly SAL-501</description>
    <label>Applicable Taxes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>