FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Apply_Under_Overpayment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Apply_Under_Overpayment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Are under or overpayment rules applied to this portal?</inlineHelpText>
    <label>Apply Under &amp; Overpayment Rules</label>
    <type>Checkbox</type>
</CustomField>