FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Approved_Clients__c.field-meta.xml
<CustomField>
    <fullName>Approved_Clients__c</fullName>
    <description>global payments</description>
    <label>Approved Clients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>