FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Approved_Industries__c.field-meta.xml
<CustomField>
    <fullName>Approved_Industries__c</fullName>
    <description>Multiselect field from global value set to Identify the Industry this Client allows us to work with.</description>
    <inlineHelpText>Select the applicable Industries this account approved.</inlineHelpText>
    <label>Approved Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>