FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Approved_Verticals__c.field-meta.xml
<CustomField>
    <fullName>Approved_Verticals__c</fullName>
    <description>global payments field.</description>
    <label>Approved Verticals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>