FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/AU_Login_Link__c.field-meta.xml
<CustomField>
    <fullName>AU_Login_Link__c</fullName>
    <description>Provide link for authorized users to log in.</description>
    <inlineHelpText>Provide link for authorized users to log in.</inlineHelpText>
    <label>AU Login Link</label>
    <type>Url</type>
</CustomField>