FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Auto_Pay_Default__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is auto pay enabled by default? Or do plan owners have to manually opt into it?</description>
    <inlineHelpText>Is auto pay enabled by default? Or do plan owners have to manually opt into it?</inlineHelpText>
    <label>Auto Pay Default</label>
    <type>Checkbox</type>
</CustomField>