FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Auto_Pay_Option_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay_Option_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is auto pay enabled?</description>
    <inlineHelpText>Is auto pay enabled?</inlineHelpText>
    <label>Auto Pay Option Enabled</label>
    <type>Checkbox</type>
</CustomField>