FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Auto_Rebalance_Active__c.field-meta.xml
<CustomField>
    <fullName>Auto_Rebalance_Active__c</fullName>
    <description>Auto-Rebalance Active?</description>
    <inlineHelpText>Is Auto-Rebalance Active?</inlineHelpText>
    <label>Auto-Rebalance Active?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>