FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Bank_Details_Link__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Link__c</fullName>
    <description>Global Payments field to capture the link for where the bank detail documents are.</description>
    <label>Bank Details Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>