FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Canonical__c.field-meta.xml
<CustomField>
    <fullName>Canonical__c</fullName>
    <inlineHelpText>CRS root Canonical for this product</inlineHelpText>
    <label>Canonical</label>
    <length>50</length>
    <type>Text</type>
</CustomField>