FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Chargeback_Fee__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Fee__c</fullName>
    <description>global payments field</description>
    <label>Chargeback Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>