FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Client_FAQ_Page__c.field-meta.xml
<CustomField>
    <fullName>Client_FAQ_Page__c</fullName>
    <description>For support team:  link to the client&apos;s website that shares information, links, etc about Flywire and how to sign up for plans</description>
    <inlineHelpText>lLnk to the client&apos;s website that shares information, links, etc about Flywire and how to sign up for plans</inlineHelpText>
    <label>Client FAQ Page</label>
    <type>Url</type>
</CustomField>