FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Enter the 3 letter code entered in Admin/Config that identifies this portal.</description>
    <inlineHelpText>Enter the 3 letter code entered in Admin/Config that identifies this portal.</inlineHelpText>
    <label>Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>