FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Collection_Currency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Currency__c</fullName>
    <description>Changed name from Collection CCY per global payments.</description>
    <label>Collection Currency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>