FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Config_Owner__c.field-meta.xml
<CustomField>
    <fullName>Config_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the Product Config record - Child record to Bank Partner or PSP Account</description>
    <inlineHelpText>Owner of the Product Config record - Child record to Bank Partner or PSP Account</inlineHelpText>
    <label>Config Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>