FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <description>The type of integration Configuration set up for this portal or product.</description>
    <inlineHelpText>Select all the types of integration configurations / Solutions set up for this specific portal or product.</inlineHelpText>
    <label>Configuration Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callbacks 1.0</fullName>
            </value>
            <value>
                <fullName>Callbacks 2.0</fullName>
            </value>
            <value>
                <fullName>Commercial Checkout</fullName>
                <label>Checkout</label>
            </value>
            <value>
                <fullName>Commercial Dashboard</fullName>
            </value>
            <value>
                <fullName>Commercial URL</fullName>
            </value>
            <value>
                <fullName>Custom file</fullName>
            </value>
            <value>
                <fullName>D21</fullName>
            </value>
            <value>
                <fullName>Dynamic Links</fullName>
            </value>
            <value>
                <fullName>Embed 1</fullName>
            </value>
            <value>
                <fullName>Embed 2</fullName>
            </value>
            <value>
                <fullName>FranConnect Connector</fullName>
            </value>
            <value>
                <fullName>Gateway JSON</fullName>
            </value>
            <value>
                <fullName>Gateway URL</fullName>
            </value>
            <value>
                <fullName>Intelligent Link</fullName>
            </value>
            <value>
                <fullName>Intelligent Link Batch Generator</fullName>
            </value>
            <value>
                <fullName>International Payment Plan (No IT)</fullName>
            </value>
            <value>
                <fullName>Invoice API</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>NetSuite Connector</fullName>
            </value>
            <value>
                <fullName>Payment Request</fullName>
            </value>
            <value>
                <fullName>Payment Request API</fullName>
            </value>
            <value>
                <fullName>Payment Status API</fullName>
            </value>
            <value>
                <fullName>Payment URL</fullName>
            </value>
            <value>
                <fullName>Quick-Pay Dynamic Links</fullName>
            </value>
            <value>
                <fullName>Refunds API</fullName>
            </value>
            <value>
                <fullName>Rest Hooks</fullName>
            </value>
            <value>
                <fullName>Scheduled Payments</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Static Links</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>