FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Corporate_Signers__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Signers__c</fullName>
    <description>Global payments field that used to be on the account object as &quot;authorized signatories&quot; - changed name and added field to product configuration record instead of account record.</description>
    <label>Corporate Signers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Michael Ellis</fullName>
            </value>
            <value>
                <fullName>Mike Massaro</fullName>
            </value>
            <value>
                <fullName>Peter Butterfield</fullName>
            </value>
            <value>
                <fullName>Ryan Frere</fullName>
            </value>
            <value>
                <fullName>Aled Morgan</fullName>
            </value>
            <value>
                <fullName>Ignacio Perez</fullName>
            </value>
            <value>
                <fullName>Jaume Montesinos</fullName>
            </value>
            <value>
                <fullName>Maria Chamorro Guzman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>