FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Credit_Card_Processor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Processor__c</fullName>
    <description>Select credit card processor – Astrick* = *On list of processors but is listed as a private independent sales organization (ISO)</description>
    <inlineHelpText>Select credit card processor – Astrick* = *On list of processors but is listed as a private independent sales organization (ISO)</inlineHelpText>
    <label>Credit Card Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*TRANSNATIONAL</fullName>
            </value>
            <value>
                <fullName>ADYEN</fullName>
            </value>
            <value>
                <fullName>ALLIANZ</fullName>
            </value>
            <value>
                <fullName>AUTHNET</fullName>
            </value>
            <value>
                <fullName>CARDCONNECT</fullName>
            </value>
            <value>
                <fullName>CYBERSOURCE</fullName>
            </value>
            <value>
                <fullName>ELAVON/CONVERGE</fullName>
            </value>
            <value>
                <fullName>FIRST DATA/PAYEEZY</fullName>
            </value>
            <value>
                <fullName>Flywire MOR</fullName>
            </value>
            <value>
                <fullName>PAYMENTECH</fullName>
            </value>
            <value>
                <fullName>WORLDPAY/VANTIV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>