FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Currency</inlineHelpText>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>