FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Cut_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Time__c</fullName>
    <label>Cut Off Time</label>
    <length>250</length>
    <type>Text</type>
</CustomField>