FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Default_amount_for_payers__c.field-meta.xml
<CustomField>
    <fullName>Default_amount_for_payers__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Does this portal default to a specific amount for payers?</inlineHelpText>
    <label>Default Amount for Payers?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>