FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Default_Country_for_Payers__c.field-meta.xml
<CustomField>
    <fullName>Default_Country_for_Payers__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Does this portal default to a specific country of payment origin?</inlineHelpText>
    <label>Default Country for Payers</label>
    <length>250</length>
    <type>Text</type>
</CustomField>