FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Dev_Jira_Epic_Link__c.field-meta.xml
<CustomField>
    <fullName>Dev_Jira_Epic_Link__c</fullName>
    <description>Development Jira Epic Link - Jira ticket for the development of the HC Product for the client.</description>
    <inlineHelpText>Development Jira Epic Link - Jira ticket for the development of the HC Product for the client.</inlineHelpText>
    <label>Dev Jira Epic Link</label>
    <type>Url</type>
</CustomField>