FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Enable_Payables__c.field-meta.xml
<CustomField>
    <fullName>Enable_Payables__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Are Payables enabled on this portal?</inlineHelpText>
    <label>Enable Payables</label>
    <type>Checkbox</type>
</CustomField>