FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Enable_Refunds__c.field-meta.xml
<CustomField>
    <fullName>Enable_Refunds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Are refunds enabled on this portal?</inlineHelpText>
    <label>Enable Refunds</label>
    <type>Checkbox</type>
</CustomField>