FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Enrollment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee__c</fullName>
    <inlineHelpText>Specify amount and currency</inlineHelpText>
    <label>Enrollment Fee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>