FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Global Payments field to capture which entity this partner signed with at Flywire.</description>
    <label>Flywire Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flywire (Singapore) Pte. Ltd</fullName>
            </value>
            <value>
                <fullName>Flywire Canada Inc (Canada)</fullName>
            </value>
            <value>
                <fullName>Flywire GK (Japan)</fullName>
            </value>
            <value>
                <fullName>Flywire Healthcare Corporation (US)</fullName>
            </value>
            <value>
                <fullName>Flywire Payments Corporation (US)</fullName>
            </value>
            <value>
                <fullName>Flywire Payments Ltd (UK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>