FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Est_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Live_Date__c</fullName>
    <description>Date you think the Product will go live. TO be used to compare against actual live date.</description>
    <inlineHelpText>Date you think the Product will go live.</inlineHelpText>
    <label>Est. Live Date</label>
    <type>Date</type>
</CustomField>