FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Fall_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Fall_Due_Date__c</fullName>
    <description>For RM team to determine when clients Fall bills are due</description>
    <inlineHelpText>Format: MM/DD</inlineHelpText>
    <label>Fall Due Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>