FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Fall_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Fall_Release_Date__c</fullName>
    <description>For RM when is the clients fall bill released to students.</description>
    <inlineHelpText>Format: MM/DD</inlineHelpText>
    <label>Fall Release Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>