FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/FIOF__c.field-meta.xml
<CustomField>
    <fullName>FIOF__c</fullName>
    <description>Link to completed FIOF (Flywire Internal Onboarding Form)</description>
    <inlineHelpText>Link to completed FIOF (Flywire Internal Onboarding Form)</inlineHelpText>
    <label>FIOF</label>
    <type>Url</type>
</CustomField>