FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/First_Opp_ProdConfig__c.field-meta.xml
<CustomField>
    <fullName>First_Opp_ProdConfig__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by flow if this product config is the first one set to active status under an opportunity. Admin only.</description>
    <inlineHelpText>Checked by flow if this product config is the first one set to active status under an opportunity. Admin only.</inlineHelpText>
    <label>First Opp ProdConfig</label>
    <type>Checkbox</type>
</CustomField>