FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <description>First non test payment for this portal from Looker</description>
    <inlineHelpText>First non test payment for this portal from Looker</inlineHelpText>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>