FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/First_Test_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Test_Payment_Date__c</fullName>
    <description>Date of the first Test Payment sent through portal.</description>
    <inlineHelpText>Date of the first Test Payment.</inlineHelpText>
    <label>First Test Payment Date</label>
    <type>Date</type>
</CustomField>